--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Bikers-Zone</a>
+          <button class="btn btn-warning">  <a class="navbar-brand" href="#">Bikers-Zone</a> </button>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -220,7 +220,7 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star-half-stroke"></i>
-                      
+
                     </p>
                     <h5 class="text-primary">Micheal Jackson</h5>
                     <p>Banker, Boston</p>
